--- a/aherraiz/src/app/app.component.html
+++ b/aherraiz/src/app/app.component.html
@@ -5,7 +5,7 @@
       <ul class="nav navbar-nav">
         <li role="presentation" class="active">  <a routerLink="/home" routerLinkActive="active">Home</a></li>
         <li role="presentation" class="active">  <a routerLink="/work" routerLinkActive="active">Work Experience</a></li>
-        <li role="presentation" class="active">  <a routerLink="/home" routerLinkActive="active">College Experience</a></li>
+        <li role="presentation" class="active">  <a routerLink="/college" routerLinkActive="active">College Experience</a></li>
         <li role="presentation" class="active">  <a routerLink="/home" routerLinkActive="active">Personal Life</a></li>
         <li role="presentation" class="active">  <a routerLink="/home" routerLinkActive="active">Projects</a></li>
       </ul>
