--- a/aherraiz/src/app/work/work.component.less
+++ b/aherraiz/src/app/work/work.component.less
@@ -1,15 +1,16 @@
 .headline {
   text-align: center;
-  img {
-    width: 300px;
-    height: auto;
-    margin: auto;
-    max-width: 60%;
-  }
+
 
 }
 p {
   text-align: center;
+}
+img {
+  width: 300px;
+  height: auto;
+  margin: auto;
+  max-width: 60%;
 }
 
 
@@ -33,6 +34,9 @@ p {
       text-indent: 50px;
       font-size: 16px;
       text-align: left;
+    }
+    .endingItems{
+      text-indent: 0px;
     }
   }
 }
